@@ -1,6 +1,7 @@
 **pnp-0.6.12 ??/??/2011**
-  * Feature: mod_geamrman support added.
+  * Feature: mod_geamrman support added
   * Feature: rrd_convert.pl is now able to convert all RRDs from RRD_STORAGE_TYPE=SINGLE to RRD_STORAGE_TYPE=MULTIPLE
+  * Feature: New template check_gearman.php
   * Bugfix:  rrd_convert.pl is now able to parse xml dumps created by rrdtool 1.4.x 
 
 **pnp-0.6.11 01/15/2011**
